examples-generated/namespaced/appmesh/v1beta1/route.yaml
# SPDX-FileCopyrightText: 2025 The Crossplane Authors <https://crossplane.io>
#
# SPDX-License-Identifier: CC0-1.0


apiVersion: appmesh.aws.m.upbound.io/v1beta1
kind: Route
metadata:
  annotations:
    meta.upbound.io/example-id: appmesh/v1beta1/route
  labels:
    testing.upbound.io/example-name: serviceb
  name: serviceb
  namespace: upbound-system
spec:
  forProvider:
    meshNameSelector:
      matchLabels:
        testing.upbound.io/example-name: simple
    name: serviceB-route
    region: us-west-1
    spec:
      httpRoute:
        action:
          weightedTarget:
          - virtualNodeSelector:
              matchLabels:
                testing.upbound.io/example-name: serviceb1
            weight: 90
          - virtualNodeSelector:
              matchLabels:
                testing.upbound.io/example-name: serviceb2
            weight: 10
        match:
          prefix: /
    virtualRouterNameSelector:
      matchLabels:
        testing.upbound.io/example-name: serviceb
